<resources>
    <string name="app_name">ShoppingList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="item">Item</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="example_text">Example text</string>
    <string name="groceries_done_18_36">Groceries done 18/36</string>
    <string name="tap_to_add_item">Tap to add item</string>
</resources>